Fix admin notifications table overflow

--- a/src/web/app/pages-admin/admin-notifications-page/notifications-table/notifications-table.component.scss
+++ b/src/web/app/pages-admin/admin-notifications-page/notifications-table/notifications-table.component.scss
@@ -37,10 +37,6 @@
   padding-left: 7px;
 }
 
-.col-12 {
-  overflow-x: scroll;
-
-  #notifications-table {
-    min-width: 650px;
-  }
+#notifications-table {
+  min-width: 650px;
 }
